# NBody-Simulation

./: CMakeLists.txt
include/: linmath_fmt.h
src/: main.cpp
